add header styles

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   height: 100%;
   line-height: 1;
   font-size: 14px;
-  color: #252B42;
+  color: #156963;
   font-family: Montserrat, sans-serif;
-  background-color: #FAFAFA;
+  background-color: #FFFFFF;
 }
