--- a/src/components/pages/templates/organisms/header/Header.module.scss
+++ b/src/components/pages/templates/organisms/header/Header.module.scss
@@ -1,126 +1,89 @@
-.header{
+.header {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 50;
-
-
-  .header__container{
+  .header__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     border: 1px solid black;
-    min-height: 140px;
-
-    .header__blockLogo{
+    min-height: 200px;
+    .header__blockLogo {
       margin: 40px 0 40px 40px;
       cursor: pointer;
-      img {
-      }
     }
     @media (max-width: 780px) {
       .header__blockLogo {
         margin: 20px 0 20px 20px;
       }
     }
-    @media (max-width: 550px) {
+    @media (max-width: 640px) {
       .header__blockLogo {
-        margin: 10px 0 10px 10px;
+        margin: 20px 0 30px 10px;
+      }
+      .header__blockLogo img {
+        width: 70px;
+        height: 70px;
       }
     }
-
-
-    .header__menu{
+    .header__menu {
       display: flex;
-      flex-wrap: wrap;
-      margin: 0 40px 0 0;
-
-      .menu__item{
+      .menu__item {
         cursor: pointer;
-      }
-      .menu__item:not(:last-child) {
         margin: 0 40px 0 0;
-      }
-      @media (max-width: 780px) {
-        .menu__item:not(:last-child) {
-          margin: 0 30px 0 0;
-        }
-      }
-      @media (max-width: 550px) {
-        .menu__item:not(:last-child) {
-          margin: 0 20px 0 0;
-        }
-      }
-      @media (max-width: 420px) {
-        .menu__item {
-          flex: 0 1 40%;
-          padding: 20px 0 0 48px;
+        .menu__buttonReg {
+          background: #FFFFFF;
+          padding: 11px 28px;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: calc(20 / 14 * 100%);
           text-align: center;
+          color: #156963;
+          border: 1px solid #FFFFFF;
+          min-height: 28px;
+          letter-spacing: 0.2px;
+          transition: all 0.3s ease 0s;
         }
-      }
-      .menu__buttonReg{
-        background: #FFFFFF;
-        padding: 11px 28px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: calc(20 / 14 * 100%);
-        text-align: center;
-        color: #156963;
-        border: 1px solid #FFFFFF;
-      }
-      @media (max-width: 780px) {
-        .menu__buttonReg {
-          padding: 8px 23px;
+        .menu__buttonReg:hover {
+          background: #156963;
+          color: #FFFFFF;
+          border: 1px solid #156963;
         }
-      }
-      @media (max-width: 550px) {
-        .menu__buttonReg {
-          padding: 8px 12px;
-        }
-      }
-      .menu__buttonReg:hover{
-        background: #156963;
-        color: #FFFFFF;
-        border: 1px solid #156963;
-      }
-      .menu__buttonLogIn{
-        background: #156963;
-        padding: 11px 28px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: calc(20 / 14 * 100%);
-        text-align: center;
-        color: #FFFFFF;
-        border: 1px solid #FFFFFF;
-      }
-      @media (max-width: 780px) {
         .menu__buttonLogIn {
-          padding: 8px 23px;
-        }
-      }
-      @media (max-width: 550px) {
-        .menu__buttonLogIn {
-          padding: 8px 12px;
-        }
-      }
-      .menu__buttonLogIn:hover{
-        background: #FFFFFF;
-        color: #156963;
-        border: 1px solid #156963;
-      }
-    }
-    @media (max-width: 780px) {
-      .header__menu {
-        margin: 0 20px 0 0;
-      }
-    }
-    @media (max-width: 550px) {
-      .header__menu {
-        margin: 0 10px 0 0;
-      }
-    }
+          background: #156963;
+          padding: 13px 33px;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: calc(20 / 14 * 100%);
+          text-align: center;
+          color: #FFFFFF;
+          border: 1px solid #FFFFFF;
 
+          letter-spacing: 0.2px;
+          transition: all 0.3s ease 0s;
+        }
+        .menu__buttonLogIn:hover {
+          background: #FFFFFF;
+          color: #156963;
+          border: 1px solid #156963;
+        }
+      }
+    }
   }
-
+  @media (max-width: 640px) {
+    .header__container {
+      flex-direction: column;
+      .header__menu {
+        flex-direction: column;
+        margin: 0 0 40px 0;
+        .menu__item {
+          text-align: center;
+          margin: 0 0 40px 0;
+        }
+      }
+    }
+  }
 }
