--- a/src/components/pages/templates/organisms/services/Services.module.scss
+++ b/src/components/pages/templates/organisms/services/Services.module.scss
@@ -5,7 +5,7 @@
     .services__body {
       display: flex;
       flex-wrap: wrap;
-      margin: 140px 40px 0 40px;
+      margin: 140px 0 0 40px;
 
       .services__column {
         border: 1px solid #E0E0E0;
@@ -24,7 +24,7 @@
           }
 
           .services__title {
-            flex: 0 1 57%;
+            flex: 0 1 58%;
             font-weight: 700;
             font-size: 16px;
             line-height: calc(24 / 16 * 100%);
