--- a/src/components/pages/templates/organisms/intro/Intro.module.scss
+++ b/src/components/pages/templates/organisms/intro/Intro.module.scss
@@ -3,10 +3,10 @@
     .intro__body{
       display: flex;
       flex-wrap: wrap;
-      margin: 65px 40px 30px 40px;
+      margin: 65px 40px 0 40px;
       .intro__textBlock{
         max-width: 568px;
-        margin: 0 65px 74px 0;
+        margin: 0 85px 74px 0;
         flex: 0 1 43%;
         h2{
           font-weight: 700;
@@ -61,10 +61,13 @@
       }
       @media (max-width: 640px) {
         .intro__body {
-          margin: 35px 40px 30px 40px;
+          margin: 35px 40px 0 40px;
 
           .intro__textBlock {
             flex: 0 1 100%;
+            h2{
+              font-size: 28px;
+            }
           }
           .wall img{
             width: 280px;
