--- a/src/components/pages/templates/organisms/visitCard/VisitCard.module.scss
+++ b/src/components/pages/templates/organisms/visitCard/VisitCard.module.scss
@@ -3,7 +3,7 @@
     .visitCard__body{
       min-height: 360px;
       background: #F3F4F6;
-      margin: 80px 40px 0 40px;
+      margin: 80px 40px 80px 40px;
       display: flex;
       flex-wrap: wrap;
       .visitCard__header{
@@ -50,7 +50,7 @@
       .visitCard__body{
         justify-content: center;
         align-items: center;
-        margin: 40px 40px 0 40px;
+        margin: 40px 40px 40px 40px;
         .visitCard__header{
           margin: 60px 0 20px 0;
           flex: 0 1 70%;
